--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-python==3.11
 fastapi==0.104.1
 uvicorn==0.24.0
 pydantic==2.5.0
-langchain==0.1.10
-langchain-openai==0.0.8
-langgraph==0.0.40
+langchain==0.1.20
+langchain-google-genai==0.0.11
+langgraph==0.0.50
 redis==5.0.1
