--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-pydantic==2.5.0
-langchain==0.1.20
-langchain-google-genai==0.0.11
-langgraph==0.0.50
-redis==5.0.1
+fastapi>=0.115.0
+uvicorn>=0.32.0
+pydantic>=2.9.0
+pydantic-settings>=2.6.0
+langchain>=0.3.7
+langchain-core>=0.3.15
+langchain-google-genai>=2.0.1
+langgraph>=0.2.45
+redis>=5.2.0
+python-dotenv>=1.0.1
